# signalrr

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: error.rs  lib.rs  negotiate.rs
src/connection/: bus.rs  manager.rs  mod.rs
src/protocol/: codec.rs  frame.rs  mod.rs
src/transport/: mod.rs  payload_codec.rs
