[package]
name = "signalrr"
version = "0.0.0"
edition = "2024"
description = "Rust client for ASP.NET Core SignalR with MessagePack and WASM support"
repository = "https://github.com/san-smith/signalrr"
license = "MIT OR Apache-2.0"
keywords = ["signalr", "websocket", "messagepack", "realtime", "wasm"]
categories = ["network-programming", "api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
thiserror = "1.0"
serde_json = "1.0"

# Нативный runtime и WebSocket
tokio = { version = "1.48", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
url = "2.5"
reqwest = { version = "0.12", features = ["json"] }
http = "1.0"
futures-util = "0.3"
hex = "0.4"
futures-channel = "0.3"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"